Se optimiza la vista de productos para el usuario administrador y se agregar funcion que cuenta el stock de los productos

--- a/App/templates/navbars/navbar_usuario_logueado.html
+++ b/App/templates/navbars/navbar_usuario_logueado.html
@@ -29,7 +29,6 @@
 		display: block;
 	}
 </style>
-
 		<nav class="menuUsuario">
 			<ul>
 				<li><a href="#"><i style="font-size: 30px;" class='fas fa-user'></i></a>
@@ -39,6 +38,8 @@
 					</ul>
 				</li>
 			</ul>
+			<ul>
+				<a href="#"><i style="font-size: 30px;" class='fa fa-shopping-cart'></i></a>
+			</ul>
 		</nav>
-
 {% include 'sesion/sesion.html' %}
