Se agregar un chequeo del stock de productos del lado del comprador

--- a/App/templates/cliente/index_cliente_logueado.html
+++ b/App/templates/cliente/index_cliente_logueado.html
@@ -113,13 +113,13 @@
                                         </form>
                                     </div>
                                     <div class="comprar">
-                                        <form action="comprar" method="POST">
-                                            <div style="padding: 0px;padding-top: 2px;" class="form-group">
-                                            <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
-                                            <button class="btn-comprar" type="submit">COMPRAR</button>
-                                            <!-- <button style="display:block;margin:auto;border:none;background-color: transparent;font-size: 30px;" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i></button> -->
-                                            </div>
-                                        </form>
+                                            <form action="agregarAlCarrito" method="POST">
+                                                <div style="padding: 0px;padding-top: 2px;" class="form-group">
+                                                <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
+                                                <button class="btn-comprar" type="submit">COMPRAR</button>
+                                                <!-- <button style="display:block;margin:auto;border:none;background-color: transparent;font-size: 30px;" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i></button> -->
+                                                </div>
+                                            </form>
                                     </div>
 
                                  </div>
