Se agregar indicador de existencia de stock a todas las vistas de productos y las imagenes en las vistas de productos por categoria y por marca

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -63,6 +63,11 @@
         .boton-buscar{
             border: none;
         }
+        .sinstock{
+            background-color: red;
+            width: 100%;
+            font-size: 20px;
+        }
     </style>
 </head>
 
@@ -115,16 +120,24 @@
                                             </button>
                                         </form>
                                     </div>
+                                    {% if dato[8] == 0 %}
                                     <div class="comprar">
-                                        <form action="solicitarLogin" method="POST">
-                                            <div style="padding: 0px;padding-top: 2px;" class="form-group">
-                                            <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
-                                            <button class="btn-comprar" type="submit">COMPRAR</button>
-                                            <!-- <button style="display:block;margin:auto;border:none;background-color: transparent;font-size: 30px;" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i></button> -->
-                                            </div>
-                                        </form>
+                                        <div style="padding: 0px;padding-top: 2px;" class="form-group">
+                                            <div style="color: red;text-align: center;" class="btn-comprar">SIN STOCK</div>
+                                        </div>
                                     </div>
-
+                                    {%endif%} 
+                                    {% if dato[8] != 0 %}
+                                        <div class="comprar">
+                                            <form action="solicitarLogin" method="POST">
+                                                <div style="padding: 0px;padding-top: 2px;" class="form-group">
+                                                <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
+                                                <button class="btn-comprar" type="submit">COMPRAR</button>
+                                                <!-- <button style="display:block;margin:auto;border:none;background-color: transparent;font-size: 30px;" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i></button> -->
+                                                </div>
+                                            </form>
+                                        </div>
+                                    {%endif%}
                                  </div>
                             </div>
                         </div>
