--- a/App/templates/cliente/index_cliente_logueado.html
+++ b/App/templates/cliente/index_cliente_logueado.html
@@ -112,7 +112,15 @@
                                             </button>
                                         </form>
                                     </div>
+                                    {% if dato[8] == 0 %}
                                     <div class="comprar">
+                                        <div style="padding: 0px;padding-top: 2px;" class="form-group">
+                                            <div style="color: red;text-align: center;" class="btn-comprar">SIN STOCK</div>
+                                        </div>
+                                    </div>
+                                    {%endif%} 
+                                    {% if dato[8] != 0 %}
+                                        <div class="comprar">
                                             <form action="agregarAlCarrito" method="POST">
                                                 <div style="padding: 0px;padding-top: 2px;" class="form-group">
                                                 <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
@@ -120,8 +128,8 @@
                                                 <!-- <button style="display:block;margin:auto;border:none;background-color: transparent;font-size: 30px;" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i></button> -->
                                                 </div>
                                             </form>
-                                    </div>
-
+                                        </div>
+                                    {%endif%}
                                  </div>
                             </div>
                         </div>
