--- a/App/templates/navbars/navbar_usuario_logueado.html
+++ b/App/templates/navbars/navbar_usuario_logueado.html
@@ -39,7 +39,7 @@
 				</li>
 			</ul>
 			<ul>
-				<a href="#"><i style="font-size: 30px;" class='fa fa-shopping-cart'></i></a>
+				<a href="mostrarCarrito"><i style="font-size: 30px;" class='fa fa-shopping-cart'></i></a>
 			</ul>
 		</nav>
 {% include 'sesion/sesion.html' %}
