--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -94,7 +94,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="marca"> Imagen del producto</label>
+                                <label for="marca"> Imágenes del producto</label>
                                 <input type="file" multiple name="imagenes" id="imagenes" class="form-control" style="padding:3px;color:#C11E34;"/>
                             </div>
                         </div>
