--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -5,6 +5,7 @@
         <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías </a>
         <a href="{{ url_for('listadoMarcas') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas </a>
         <a href="{{ url_for('listarCombo') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos </a>
+        <a href="{{ url_for('misCompras') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-credit-card"></i> Mis compras </a>
         <a href="{{ url_for('preguntas_frecuentes') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-question"></i> Preguntas frecuentes</a> 
         <a href="{{ url_for('contacto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-phone-alt"></i> Contacto </a> 
               
