Se agregar funcionalidad de mercadopago. Se crea la tabla mercadopago a la bbdd. Se crea el modelo mercadopago

--- a/App/templates/compra/compraConfirmada.html
+++ b/App/templates/compra/compraConfirmada.html
@@ -81,7 +81,7 @@
                         </form>
                     </td>
                     <td>
-                        <form action="pagar" method="POST">
+                        <form action="guardarPago" method="POST">
                             <div>
                                 <input value="{{idCarrito}}" type="hidden" class="form-control" name="idCarrito" id="idCarrito">
                                 <input value="{{idCompra}}" type="hidden" class="form-control" name="idCompra" id="idCompra">
